2002-02-11  Jody Goldberg <jody@gnome.org>

	* src/nautilus-bookmark-parsing.c : Include libxml/globals.h to get
	  xmlFree from its new position.

2002-02-10  Bastien Nocera  <hadess@hadess.net>

	* libnautilus-private/nautilus-thumbnails-jpeg.c:
	disable jpeglib's reading of its config.h file
	fixes HAVE_STDLIB double-definition

=== nautilus 1.1.5 ===

2002-02-09  Darin Adler  <darin@bentspoon.com>

	* NEWS: Bump version number.
	* configure.in: Bump version number.

2002-02-09  Seth Nickell  <snickell@stanford.edu>

	* icons/crux_eggplant/i-directory-12.png:
	* icons/crux_eggplant/i-directory-20.png:
	* icons/crux_eggplant/i-directory-24.png:
	* icons/crux_eggplant/i-directory-36.png:
	* icons/crux_eggplant/i-directory-72.png:
	* icons/crux_eggplant/i-directory.png:
	* icons/crux_teal/i-directory-12.png:
	* icons/crux_teal/i-directory-192.png:
	* icons/crux_teal/i-directory-20.png:
	* icons/crux_teal/i-directory-24.png:
	* icons/crux_teal/i-directory-36.png:
	* icons/crux_teal/i-directory-72.png:
	* icons/crux_teal/i-directory-96.png:
	* icons/crux_teal/i-directory.png:
	* icons/crux_teal/i-regular-12.png:
	* icons/crux_teal/i-regular-192.png:
	* icons/crux_teal/i-regular-20.png:
	* icons/crux_teal/i-regular-24.png:
	* icons/crux_teal/i-regular-36.png:
	* icons/crux_teal/i-regular-72.png:
	* icons/crux_teal/i-regular-96.png:
	* icons/crux_teal/i-regular.png:
	* icons/sierra/i-directory-12.png:
	* icons/sierra/i-directory-24.png:
	* icons/sierra/i-directory-36.png:
	* icons/sierra/i-directory-72.png:
	* icons/sierra/i-directory-96.png:
	* icons/sierra/i-directory-accept-12.png:
	* icons/sierra/i-directory-accept-24.png:
	* icons/sierra/i-directory-accept-36.png:
	* icons/sierra/i-directory-accept-72.png:
	* icons/sierra/i-directory-accept-96.png:
	* icons/sierra/i-directory-accept.png:
	* icons/sierra/i-directory.png:

	Darin's script apparently went wrong, because a number of the themes
	got switched to only having the *non* anti-aliased icons. Replaced 